[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "liionpack"
version = "0.1.0"  # Add this line
description = "A battery pack simulator for PyBaMM"
readme = "README.md"
authors = [
    { name = "Tom Tranter", email = "t.g.tranter@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "Ipython",
    "lcapy",
    "matplotlib",
    "networkx",
    "numpy",
    "openpyxl",
    "pandas",
    "plotly",
    "pybamm",
    "ray",
    "redis",
    "scikit-spatial",
    "scipy",
    "textwrapper",
    "tqdm",
    "nbconvert",
]

[project.urls]
"Bug Tracker" = "https://github.com/pybamm-team/liionpack/issues"
Changelog = "https://github.com/pybamm-team/liionpack/blob/develop/CHANGELOG.md"
Documentation = "https://liionpack.readthedocs.io/en/latest/"
Homepage = "https://github.com/pybamm-team/liionpack"

[tool.setuptools.packages.find]
include = ["liionpack", "liionpack.*"]